Revert "fix(now post): missing background color"
This reverts commit 26fedb18037bf30aa47508535d90cac2d5ffc307.

--- a/source/css/_files/now/post.css
+++ b/source/css/_files/now/post.css
@@ -29,9 +29,6 @@
     z-index: -1;
     position: absolute;
     width: 100%;
-    left: 0;
-    top: 0;
-    right: 0;
 }
 
 body.mdui-drawer-body-left .post-bg-color {
